--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,28 +20,61 @@ body {
 
 /* header styling */
 header {
+   padding: 20px 35px;
     background-color: var(--secondary-color);
     color: var(--font-color);
+    display:flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+header h1 a {
+    color:var(--font-color);
+}
+
+header nav {
+    margin: 7px 0;
+}
+
+header nav ul {
+    display:flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    list-style: none;
+}
+
+header ul li a {
+    color: var(--font-color);
+    padding: 10px 15px;
+}
+
+header a {
+    text-decoration: none;
 }
 
 /* hero style  */
 
 .hero {
-    background-image: url(../assets/images/dan-hero.jpeg);
+    background-image: url(../images/dan-hero.jpg);
+    min-height: 500px;
+    background-attachment:fixed;
+    background-position: top;
+    background-repeat: no-repeat;
     background-size: cover;
-    justify-content: center;
+    display: flex;
     flex-wrap: wrap;
-    align-items: flex-start;
-    background-attachment: fixed;
-    background-position: 80%;
 }
 
-.tagline {
+.hero-tagline {
     background-color: var(--primary-color);
     color: var(--font-color);
+    display:flex;
+    flex-wrap: wrap;
+    padding: 20px;
 }
 
 /* footer style  */
 footer {
-    font-size: 12px;
+    background-color: var(--accent-color);
 }
